--- a/cartoon-pizza-y-frutas-website/public/index.html
+++ b/cartoon-pizza-y-frutas-website/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />    
     <meta name="viewport" content="width=device-width, initial-scale=1" />    
+
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;700&display=swap');
+    </style>
     <title>Cartoon Pizza & Frutas</title>
   </head>
   <body>    
