Confirmación de pedido con envío de email completo

--- a/cartoon-pizza-y-frutas-website/public/index.html
+++ b/cartoon-pizza-y-frutas-website/public/index.html
@@ -8,6 +8,8 @@
       @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;700&display=swap');
     </style>
     <title>Cartoon Pizza & Frutas</title>
+
+    <script src="https://smtpjs.com/v3/smtp.js"></script>  
   </head>
   <body>    
     <div id="root"></div>    
